syntax = "proto3";

package keyauth.session;
option go_package = "github.com/infraboard/keyauth/pkg/session";

import "pkg/session/pb/request.proto";
import "pkg/session/pb/session.proto";
import "pkg/token/pb/token.proto";

// UserService 用户端接口
service UserService {
	rpc Login(token.Token) returns(Session) ;
	rpc Logout(LogoutRequest) returns(Session) ;
	rpc DescribeSession(DescribeSessionRequest) returns(Session);
	rpc QuerySession(QuerySessionRequest) returns(Set);
}

// AdminService admin接口
service AdminService {
	rpc QueryUserLastSession(QueryUserLastSessionRequest) returns(Session);
}